--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "wn-twigextender-plugin",
-    "version": "0.8.2",
-    "description": "Webpack based boilerplate including ES6, Babel, Sass and much more",
+    "version": "1.0.0",
+    "description": "Plugin for WinterCMS to extend Twig with useful filters",
     "author": "Manuel Burghammer",
     "license": "MIT",
     "repository": {
