--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,10 @@
     "require": {
         "php": ">=5.4.0",
         "composer/installers": "~1.0"
+    },
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true
+        }
     }
 }
